package org.arvinw.example5;

public abstract class HighClassUnit extends Unit{
    public HighClassUnit(int x, int y) {
        super(25, 30, 300, x, y);
    }
}
