package org.arvinw.example5;

public abstract class LowClassUnit extends Unit{
    public LowClassUnit( int x, int y) {
        super(5, 2, 35, x, y);
    }
}
