package org.arvinw.example5;

public abstract class MidClassUnit extends Unit{
    public MidClassUnit(int x, int y) {
        super(10, 8, 80, x, y);
    }
}
